# backend/internal/api/oas_request_encoders_gen.go
@@ -52,6 +52,20 @@ func encodeSelectOrgRequest(
 	return nil
 }
 
+func encodeSubmitOssApplicationRequest(
+	req *OssApplicationRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeTestLinearTemplateRequest(
 	req *TemplateTestRequest,
 	r *http.Request,
